added internal css and other elements in html

--- a/Week1Questions.html
+++ b/Week1Questions.html
@@ -32,10 +32,11 @@
     <section>
       <header><h2>HTML Question</h2></header>
       <section class="question">
-        <!-- Your question here -->
+        In HTML, Document Object Model(DOM) works similar to which Data Structure?
       </section>
       <section class="answer">
-        <!-- Your answer here -->
+        DOM treats HTML document as a tree. Each node in tree is an object representing a part of HTML document.
+        For example, HTML Tag is a node and it has head tag and body tag as the children nodes.
       </section>
     </section>
 
