added internal css and other elements in html

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <li class="logo-name"><a href="#index">Global 360</a></li>
       </ul>
     </div>
-    </header
+  </header>
   </section>
 
 
