--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           text-shadow:2px 2px #03a9f4;
 
       }
-    .header-p, body{
+    .header-p{
         font-size: 20px;
         font-style: italic;
         font-family: fantasy;
@@ -112,66 +112,10 @@
         margin-bottom: 10px;
     }
 
-
-    .menu-restaurant{
-    width: 50%;
-    float: left;
-    padding: 15px;
-    position: relative;
-}
-.menu-restaurant .menu-title {
-    float: left;
-    font-family: Montserrat,arial;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    color: #FFB03B;
-}
-.menu-restaurant .menu-line {
-    position: absolute;
-    bottom: 6px;
-    border-bottom: 1px dotted rgba(0,0,0,.3);
-    margin-left: .6rem;
-    margin-right: .6rem;
-}
-.menu-restaurant .menu-price {
-    font-weight: 600;
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-.menu-restaurant .menu-subtitle {
-    display: block;
-    float: left;
-    color: #B1B1B1;
-    font-family: Satisfy,'Open Sans',arial;
-    font-size: 1.2rem;
-  }
-  .menu-restaurant span.clearfix {
-    position: relative;
-    display: block;
-  }
-
-  #menu-flters ul li a.active, #menu-flters ul li a:hover {
-    background: #FFB03B;
-    color: #fff;
-    border: 1px solid #FFB03B;
-  }
-  #menu-flters ul li {
-    display: inline-block;
-    color: #fff;
-    text-transform: capitalize;
-    letter-spacing: 1px;
-    margin-bottom: 40px;
-  }
-  #menu-flters ul li a {
-    padding: 10px 20px;
-    font-size: 14px;
-    color: #565656;
-    border-radius: 0px;
-    border: 1px solid #BBBBBB;
-    text-decoration: none;
-    cursor: pointer;
-  }
+    table {
+	     border-collapse: collapse;
+	      border-spacing: 0;
+    }
 
 
 
@@ -211,7 +155,81 @@
       <div class="row">
         <div class="col-md-12 text-center marb-35"> -->
           <h1 class="header-h">Menu</h1>
+          <table border="0" cellpadding="0" cellspacing="0" style="width:50%;float:left">
 
+              <thead>
+                <tr>
+                  <th colspan="2">Breakfast</th>
+                </tr>
+              <tr>
+              </thead>
+              <tbody>
+              <tr>
+                <td> 11</td>
+                <td> 12</td>
+              </tr>
+              <tr>
+                <td> 21</td>
+                <td> 22</td>
+              </tr>
+            </tbody>
+          </table>
+          <table border="0" cellpadding="0" cellspacing="0" style="width:50%;float:left">
+            <thead>
+              <tr>
+                <th colspan="2">Lunch</th>
+              </tr>
+            <tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td> 11</td>
+                <td> 12</td>
+              </tr>
+              <tr>
+                <td> 21</td>
+                <td> 22</td>
+              </tr>
+            </tbody>
+          </table>
+
+          <table border="0" cellpadding="0" cellspacing="0" style="width:50%;float:left">
+            <thead>
+              <tr>
+                <th colspan="2">Dinner</th>
+              </tr>
+            <tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td> 11</td>
+                <td> 12</td>
+              </tr>
+              <tr>
+                <td> 21</td>
+                <td> 22</td>
+              </tr>
+            </tbody>
+          </table>
+
+          <table border="0" cellpadding="0" cellspacing="0" style="width:50%;float:left">
+            <thead>
+              <tr>
+                <th colspan="2">Drinks</th>
+              </tr>
+            <tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td> 11</td>
+                <td> 12</td>
+              </tr>
+              <tr>
+                <td> 21</td>
+                <td> 22</td>
+              </tr>
+            </tbody>
+          </table>
 
 
 
