added web structure questions

--- a/Week1Questions.html
+++ b/Week1Questions.html
@@ -32,11 +32,11 @@
     <section>
       <header><h2>HTML Question</h2></header>
       <section class="question">
-        In HTML, Document Object Model(DOM) works similar to which Data Structure?
+        <p>In HTML, Document Object Model(DOM) works similar to which Data Structure?</p>
       </section>
       <section class="answer">
-        DOM treats HTML document as a tree. Each node in tree is an object representing a part of HTML document.
-        For example, HTML Tag is a node and it has head tag and body tag as the children nodes.
+        <p>DOM treats HTML document as a tree. Each node in tree is an object representing a part of HTML document.
+        For example, HTML Tag is a node and it has head tag and body tag as the children nodes.</p>
       </section>
     </section>
 
@@ -44,9 +44,14 @@
       <header><h2>CSS Question</h2></header>
       <section class="question">
         <!-- Your question here -->
+        <p>Which CSS property can cause overlapping in HTML elements?</p>
       </section>
       <section class="answer">
         <!-- Your answer here -->
+        <pre>Negative margins
+Example: margin-top:-200px
+
+        </pre
       </section>
     </section>
 
@@ -54,9 +59,11 @@
       <header><h2>Website Structure Question 1</h2></header>
       <section class="question">
         <!-- Your question here -->
+        <p>What is the parameter of a good website navigation and structure?</p>
       </section>
       <section class="answer">
         <!-- Your answer here -->
+        <p>User should be able to navigate wherever they want in minimum number of clicks. It should not be complicated to navigate from one page to another.</p>
       </section>
     </section>
 
@@ -64,9 +71,15 @@
       <header><h2>Website Structure Question 2</h2></header>
       <section class="question">
         <!-- Your question here -->
+        <p>How one can optimize a website? Mention some ways.</p>
       </section>
       <section class="answer">
         <!-- Your answer here -->
+        <ul>
+          <li>Avoid loading unused CSS modules or scripts</li>
+          <li>Use responsive images and load images according to user's case</li>
+          <li>User server side caching mechanisms</li>
+        </ul>
       </section>
     </section>
 
