--- a/index.html
+++ b/index.html
@@ -202,15 +202,18 @@
               </thead>
               <tbody>
               <tr>
+                <td><img src="img/Avacado and Goat cheese salad.jpg" class="img" width="50" height="50"/></td>
                 <td> Avacado and Goat cheese salad</td>
                 <td>$12.50</td>
               </tr>
               <tr>
+                <td><img src="img/Egg and Bacon Panini.jpg" class="img" width="50" height="50"/></td>
                 <td>Egg and Bacon Panini</td>
                 <td>$12</td>
               </tr>
               <tr>
-                <td>Egg and Bacon Panini</td>
+                <td><img src="img/Banana Nutella Pancakes.jpg" class="img" width="50" height="50"/></td>
+                <td>Banana Nutella Pancake</td>
                 <td>$12</td>
               </tr>
             </tbody>
@@ -224,15 +227,18 @@
             </thead>
             <tbody>
               <tr>
+                <td><img src="img/Grilled Fish Fillet.jpeg" class="img" width="50" height="50"/></td>
                 <td> Grilled Fish Fillet</td>
                 <td>$15</td>
               </tr>
               <tr>
+                <td><img src="img/Global Chicken Schintzel.jpg" class="img" width="50" height="50"/></td>
                 <td>Global Chicken Schintzel</td>
                 <td>$14.50</td>
               </tr>
               <tr>
-                <td>Global Meat Balls</td>
+                <td><img src="img/Global Meat Balls.jpg" class="img" width="50" height="50"/></td>
+                <td>Global Meatballs</td>
                 <td>$14.50</td>
               </tr>
             </tbody>
@@ -247,14 +253,17 @@
             </thead>
             <tbody>
               <tr>
+                <td><img src="img/Roasted Tomato and Basil Soup.jpg" class="img" width="50" height="50"/></td>
                 <td>Roasted Tomato and Basil Soup</td>
                 <td>$13</td>
               </tr>
               <tr>
+                <td><img src="img/Chicken Burger.jpg" class="img" width="50" height="50"/></td>
                 <td> Chicken Burger</td>
                 <td>$14.50</td>
               </tr>
               <tr>
+                <td><img src="img/Veggie Burger.jpg" class="img" width="50" height="50"/></td>
                 <td> Veggie Burger</td>
                 <td>$14</td>
               </tr>
@@ -270,14 +279,17 @@
             </thead>
             <tbody>
               <tr>
+                <td><img src="img/Long Island Tea.jpg" class="img" width="50" height="50"/></td>
                 <td>Long Island Tea</td>
                 <td>$10.50</td>
               </tr>
               <tr>
+                <td><img src="img/Vodkatini.jpg" class="img" width="50" height="50"/></td>
                 <td>Vodkatini</td>
                 <td>$10</td>
               </tr>
               <tr>
+                <td><img src="img/Martini.jpg" class="img" width="50" height="50"/></td>
                 <td>Martini</td>
                 <td>$10</td>
               </tr>
