edited week 2 questions and added location image for index.html

--- a/Week2Questions.html
+++ b/Week2Questions.html
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Questions and Answers for Week 1</title>
+  <title>Questions and Answers for Week 2</title>
   <!-- I couldn't help it, it was just too ugly without
     a little style. -->
   <style>
@@ -28,58 +28,74 @@
 
 <body>
   <main>
-    <header><h1>Week #1 Questions and Answers</h1></header>
+    <header><h1>Week #2 Questions and Answers</h1></header>
     <section>
-      <header><h2>HTML Question</h2></header>
+      <header><h2>Question 1</h2></header>
       <section class="question">
-        <p>In HTML, Document Object Model(DOM) works similar to which Data Structure?</p>
+        <p>JavaScript practice with simple loops: Write JavaScript code in your browsers developer tool console to produce a list of squares and cubes for numbers from 1 to 10. Take a screen capture showing the code and result. Include this screen shot as an image to answer this question.
+
+</p>
       </section>
       <section class="answer">
-        <p>DOM treats HTML document as a tree. Each node in tree is an object representing a part of HTML document.
-        For example, HTML Tag is a node and it has head tag and body tag as the children nodes.</p>
+        <p>ANSWER:</p>
+        <img src="img/q1.png" width="600" height="400"/>
       </section>
     </section>
 
     <section>
-      <header><h2>CSS Question</h2></header>
+      <header><h2>Question 2</h2></header>
       <section class="question">
         <!-- Your question here -->
-        <p>Which CSS property can cause overlapping in HTML elements?</p>
-      </section>
-      <section class="answer">
-        <!-- Your answer here -->
-        <pre>Negative margins
-Example: margin-top:-200px
 
-        </pre
+      <section class="answer">
+        <p>ANSWERS:</p>
+        <!-- Your answer here -->
+        <pre>
+a) "code" is the CSS selector and there are 106 "code" elments the document.
+b) "code" contained in "pre" is the CSS selector and there are 36 "code" elements contained in "pre" elements the document.
+c) "figure" is the CSS selector and there are 5 "figure" elments the document.
+d) "img" is the CSS selector that I used for question d and there are 6 "img" elments in document. It is different from above because the first image is not the figure.
+        </pre>
       </section>
     </section>
 
     <section>
-      <header><h2>Website Structure Question 1</h2></header>
+      <header><h2>Question 3</h2></header>
       <section class="question">
         <!-- Your question here -->
-        <p>What is the parameter of a good website navigation and structure?</p>
+        <pre>a) Find the number of patents on the page and put the number into a JavaScript variable
+with a name of your choosing. Hint each patent is in its own paragraph with class="patent"
+Take a screen shot of your code and use that as an answer.</pre>
+        <p>ANSWER:</p>
+
+        <img src="img/q3_a.png" width="600" height="400"/>
+      <pre>b) Figure out how to get the title as a plain JavaScript string for any patent on the page.
+Show your method works with the 33rd patent listed. Take a screen shot of your code and answer.
+Hint each patent’s title is in a span element with class=Title and you can get content from a DOM
+element via the innerHTML and outerHTML properties.</pre>
       </section>
       <section class="answer">
         <!-- Your answer here -->
-        <p>User should be able to navigate wherever they want in minimum number of clicks. It should not be complicated to navigate from one page to another.</p>
+        <p>ANSWER:</p>
+
+        <img src="img/q3.png" width="600" height="400"/>
       </section>
     </section>
 
     <section>
-      <header><h2>Website Structure Question 2</h2></header>
+      <header><h2>Question 4</h2></header>
       <section class="question">
         <!-- Your question here -->
-        <p>How one can optimize a website? Mention some ways.</p>
+        <p>Explain what the DOM is in your own words and how it relates to an HTML page and why it might differ.</p>
       </section>
       <section class="answer">
         <!-- Your answer here -->
-        <ul>
-          <li>Avoid loading unused CSS modules or scripts</li>
-          <li>Use responsive images and load images according to user's case</li>
-          <li>User server side caching mechanisms</li>
-        </ul>
+        <p>ANSWER:</p>
+        <pre>DOM model is used for accessing document objects or we can say DOM is an object-oriented
+representation of a web page. HTML DOM is a standard object model for HTML and
+it is also a programming interface. HTML lets you represent a certain kind of DOM in text.
+HTML standards states HTML elements such as tags or attributes and their meaning.
+Whereas, DOM states interfaces implemented by objectsfrom tree structure of DOM object in the browser. </pre>
       </section>
     </section>
 
