--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
     background-image:url();
   }
 
+  .container1{
+    background-image: url(img/bgrestaurant.jpeg);
+    background-position: center;
+    background-size:contain;
+    background-repeat:round;
+    width: 100%
+    height:auto;
+
+  }
+
   ul.topnav li {float:right;}
 
   ul.topnav li a {
@@ -116,7 +126,7 @@
         font-family:monospace;
         font-weight: lighter;
         text-align: center;
-        text-shadow:0.5px 0.5px #03a9f4;
+        text-shadow:0.5px 0.5px #FFFFFF;
     }
     .about-info, .mr-15{
         margin-bottom: 10px;
@@ -177,7 +187,7 @@
 
   <!--about-->
   <section id="about" class="section-padding">
-    <div class="container">
+    <div class="container1">
           <h1 class="header-h">Global 360</h1>
           <p class="header-p">Global journey of food from all around the world. </p>
         </div>
@@ -311,12 +321,13 @@
   <div class="row">
   <div class="column" >
     <h2 class="header-h2">Location</h2>
-    <pre class="header-p">2nd Grant Ave,
+    <pre class="header-p">2nd Eddy St.,
       San Francisco, CA 94108 </pre>
+      <h2 class="header-h2">Contact Number</h2>
+      <pre class="header-p">(854)238-0819</pre>
   </div>
   <div class="column">
-    <h2 class="header-h2">Contact Number</h2>
-    <pre class="header-p">(854)238-0819</pre>
+    <img src="img/location.png" width="200" height="200" style="align:right"/>
   </div>
   </div>
 </section>
