created three new html pages and external css file

--- a/index.html
+++ b/index.html
@@ -4,182 +4,27 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/stylesheet.css" type="text/css"/>
   <!-- What else should be in the head? -->
   <title>GLobal 360</title>
   <!--  Internal style sheet goes here  -->
-  <style>
 
-  body {margin: 0;}
-
-  ul.topnav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: ##3333331f;
-    background-image:url();
-  }
-
-  .container1{
-    background-image: url(img/bgrestaurant.jpeg);
-    background-position: center;
-    background-size:contain;
-    background-repeat:round;
-    width: 100%
-    height:auto;
-
-  }
-
-  ul.topnav li {float:right;}
-
-  ul.topnav li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 30px 40px;
-    text-decoration:inherit;
-  }
-
-  ul.topnav li a:hover:not(.active) {background-color: #111;}
-
-  ul.topnav li a.active {background-color: #4CAF50;}
-
-  ul.topnav li.right {
-    float: center;
-    color:red;
-    text-align: center;
-    display: flow-root;
-    text-decoration-style: wavy;
-  }
-
-  ul.topnav li.right a{
-
-    color:red;
-    text-align: center;
-    display: flow-root;
-    text-decoration-style: wavy;
-
-
-  }
-
-  @media screen and (max-width: 600px){
-    ul.topnav li.right,
-    ul.topnav li {float: none;}
-  }
-  #banner{
-    /* background: url(/img/bg_img.jpg) no-repeat center top; */
-    background-size: cover;
-    min-height: 630px;
-  }
-  .bg-color{
-    /* background-color: RGBA(0, 0, 0, 0.61); */
-     background-color:#03a9f4;
-    min-height: 0px;
-  }
-
-  .section-padding{
-    padding: 10px 0px;
-
-    }
-    .logo-name{
-    font-family: 'Satisfy', sans-serif;
-    font-size: 20px;
-    margin-top: 0px;
-    color: #FFB03B;
-    float: left;
-    text-align: left;
-    display: flow-root;
-    text-decoration-style: wavy;
-    text-shadow:2px 2px #FFB03B;
-  }
-
-  .header-h {
-        font-size: 50px;
-        font-style: italic;
-        font-family: fantasy;
-        font-weight: bolder;
-        text-align: center;
-        text-shadow:2px 2px #FFB03B;
-
-    }
-    .header-h1 {
-          font-size: 25px;
-          font-style: italic;
-          font-family: fantasy;
-          font-weight: bolder;
-          text-align: center;
-          text-shadow:2px 2px #03a9f4;
-
-      }
-      .header-h2 {
-            font-size: 15px;
-            font-style:normal;
-            font-family:monospace;
-            font-weight:lighter;
-            text-align: center;
-            text-shadow:0.5px 0.5px #03a9f4;
-
-        }
-    .header-p{
-        font-size: 15px;
-        font-style: italic;
-        font-family:monospace;
-        font-weight: lighter;
-        text-align: center;
-        text-shadow:0.5px 0.5px #FFFFFF;
-    }
-    .about-info, .mr-15{
-        margin-bottom: 10px;
-    }
-
-    table {
-	     border-collapse: collapse;
-	      border-spacing: 0;
-        text-align: center;
-    }
-    .column {
-    float: left;
-    width: 50%;
-    padding: 10px;
-
-  }
-
-/* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  * {
-    box-sizing: border-box;
-  }
-  table{
-    font-size: 15px;
-    font-style:oblique;
-    font-family:sans-serif;
-    font-weight:400;
-    text-align: center;
-    text-shadow:0.5px 0.5px #EC579D;
-
-
-  }
-
-
-
-  </style>
 </head>
 <body>
   <section>
     <div class="bg-color">
     <header id="header">
+    <nav>
       <ul class="topnav">
 
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#Menu">Menu</a></li>
+        <li><a href="products.html">PRODUCTS</a></li>
+        <li><a href="reservations.html">RESERVATIONS</a></li>
+        <li><a href="events.html">EVENTS</a></li>
+        <li><a href="index.html">HOME</a></li>
         <!-- <li><a class="" href="#home">Home</a></li> -->
-        <li class="logo-name"><a href="#index">Global 360</a></li>
+        <li class="logo-name"><a href="index.html">GLOBAL 360</a></li>
       </ul>
+    </nav>
     </div>
   </header>
   </section>
